--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -1,61 +1,104 @@
-:root{
-    --teal: #2ec;
-    --teal_hover:#279e8c;
-}
+        :root{
+            --teal: #2ec;
+            --teal_hover:#279e8c;
+        }
+        header, .topbar {
+            position: sticky;
+            top: 0;
+            z-index: 1030;
+        }
+        #sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 220px; 
+            height: 100vh; 
+            background-color: #212529;
+            padding-top: 60px; 
+            overflow-y: auto;
+        }
+        
+        .btn.custom-bg {
+            background-color: #0d6efd;
+        }
+        .btn.custom-bg:hover {
+            background-color: #0b5ed7;
+        }
+
+        nav.nav-link.active {
+            background-color: #0d6efd;
+            color: #fff !important;
+            border-radius: 0.375rem;
+        }
+        nav.nav-link:hover {
+            background-color: #0b5ed7;
+            color: #fff !important;
+        }
 
 
-*{
-    font-family: 'Poppins' ,'sans-serif';
-}
-.h-font{
-    font-family:'Merienda',cursive;
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-.box{
-        border-top-color:var(--teal);
-      }
+        *{
+            font-family: 'Poppins' ,'sans-serif';
+        }
+        .h-font{
+            font-family:'Merienda',cursive;
+        }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        .box{
+                border-top-color:var(--teal);
+            }
 
-input[type=number] {
-    -moz-appearance: textfield;
-}
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
 
-.custom-bg{
-    background-color: var(--teal);
-    border: 1px solid var(--teal);
-}
+        .custom-bg{
+            background-color: var(--teal);
+            border: 1px solid var(--teal);
+        }
 
-.custom-bg:hover{
-    background-color: var(--teal_hover);
-    border-color: var(--teal_hover);
-}
-.h-line{
-          width: 60px;
-          height: 3px;
+        .custom-bg:hover{
+            background-color: var(--teal_hover);
+            border-color: var(--teal_hover);
+        }
+        .h-line{
+                width: 60px;
+                height: 3px;
+                }  
+
+        .custom-alert{
+
+            position: fixed;
+            top: 80px;
+            right: 25px;
         }  
 
-.custom-alert{
+        ::-webkit-scrollbar-track{
+            background: #2ec;
+        }
 
-    position: fixed;
-    top: 80px;
-    right: 25px;
-}  
-
-::-webkit-scrollbar-track{
-    background: #2ec;
-}
-
-::-webkit-scrollbar-thumb{
-    background: rgb(201, 208, 207);
-}
+        ::-webkit-scrollbar-thumb{
+            background: rgb(201, 208, 207);
+        }
 
 
-::-webkit-scrollbar-thumb:hover{
-    background: rgb(210, 167, 197);
-}
+        ::-webkit-scrollbar-thumb:hover{
+            background: rgb(210, 167, 197);
+        }
+        #dashboard-menu{
+            position: fixed;
+            height: 100%;
+        }
 
-
-
+        @media screen and (max-width: 991px){
+        #dashboard-menu{
+            height: auto;
+            width: 100%;
+        }
+        #main-content{
+            margin-top: 60px;
+        }
+        }
