--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -44,7 +44,7 @@
         }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
+            appearance: none;
             margin: 0;
         }
         .box{
@@ -52,7 +52,7 @@
             }
 
         input[type=number] {
-            -moz-appearance: textfield;
+            appearance: textfield;
         }
 
         .custom-bg{
