--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -57,7 +57,7 @@
 
        .custom-bg{
         background-color: #0d6efd; /* ose ngjyra që do */
-        color: white;
+        color: rgb(255, 255, 255);
         border: none;
         }
 
@@ -66,7 +66,7 @@
 
         .custom-bg:hover{
             background-color: var(--teal_hover);
-            border-color: var(--teal_hover);
+            border-color: var(--pink_hover);
         }
         .h-line{
                 width: 60px;
