--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,6 @@
     --teal_hover:#279e8c;
 }
 
-
 *{
     font-family: 'Poppins' ,'sans-serif';
 }
@@ -43,3 +42,18 @@ input[type=number] {
     top: 25px;
     right: 25px;
 }
+
+.swiper,
+        .swiper-wrapper,
+        .swiper-slide {
+            pointer-events: auto;
+        }
+
+        .swiper-slide {
+            cursor: grab;
+        }
+        .swiper-slide img {
+            width: 100%;         
+            height: 400px;        
+            object-fit: cover;     
+        }
