--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -97,16 +97,18 @@
             height: 100%;
         }
 
-        @media screen and (max-width: 991px){
-        #dashboard-menu{
-            height: auto;
-            width: 100%;
-        }
-#main-content{
-  margin-left: 220px;   /* e njëjtë me sidebar */
-  padding: 20px;
+      @media (max-width: 991px) {
+  nav {
+    position: relative !important;
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  #main-content {
+    margin-left: 0;
+  }
 }
 
 
 
-        }
+        
