--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,6 @@
     --teal_hover: rgb(39, 158, 140);
 }
 
-
 *{
     font-family: 'Poppins' ,'sans-serif';
 }
@@ -51,7 +50,10 @@ input[type=number] {
 }
 
 .custom-alert{
-    position:fixed;
-    top: 25px;
-    right: 25px;
+    position: fixed;
+    top: 150px;            
+    right: 20px;
+    z-index: 2000;        
+    width: auto;
+    max-width: 400px;
 }
